add HTTP 303 and unauthenticated HTTP HEAD

--- a/views/Person.hbs
+++ b/views/Person.hbs
@@ -80,7 +80,7 @@
           {{/each}}
         </ul>
       {{/if}}
-      {{#if contactPoin}}
+      {{#if contactPoint}}
         <ul>
           <li><span class="glyphicon glyphicon-comment"></span></li>
           {{#each contactPoint}}
